Fix btn-start on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ h1, h2, h3, h4, h5, h6 {
         padding: 80px 0 20px 0;
     }
     
-    .header .btn {
+    .header .btn.start {
         margin: 0;
     }
     
